--- a/index.html
+++ b/index.html
@@ -927,7 +927,7 @@
                     
                     <button type="submit" class="submit-button">
                         <span class="whatsapp-icon">📱</span>
-                        Enviar via WhatsApp
+                        Realizar Matrícula
                     </button>
                 </form>
             </div>
@@ -1015,7 +1015,7 @@
             }
             
             message += `\n⏰ *Enviado em:* ${new Date().toLocaleString('pt-BR')}\n`;
-            message += `\n_Aguardo contato para finalizar a matrícula! 😊_`;
+            message += `\n_Aguarde nosso atendente para finalizar a matrícula! 😊_`;
 
             // Codificar mensagem para URL
             const encodedMessage = encodeURIComponent(message);
